--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             feitas sob medida para o cliente. Explore o mundo na sua velocidade
             com a Bikcraft.
           </p>
-          <a class="botao" href="/bicicletas.html">Escolha a sua</a>
+          <a class="botao" href="./bicicletas.html">Escolha a sua</a>
         </div>
         <picture>
           <source
