--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             srcset="/img/bicicletas/nimbus.jpg"
           />
           <img
-            src="/img/fotos/introducao.jpg"
+            src="./img/fotos/introducao.jpg"
             width="1280"
             height="1600"
             alt="Bicicleta elétrica preta."
