--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <header class="header-bg">
       <div class="header container">
         <a href="/"
-          ><img src="/img/bikcraft.svg" width="136" height="32" alt="Bikcraft"
+          ><img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft"
         /></a>
         <nav aria-label="primaria">
           <ul class="header-menu font-1-m cor-0">
-            <li><a href="/bicicletas.html">Bicicletas</a></li>
+            <li><a href="bicicletas.html">Bicicletas</a></li>
             <li><a href="/seguros.html">Seguros</a></li>
             <li><a href="/contato.html">Contato</a></li>
           </ul>
@@ -49,7 +49,7 @@
         <picture>
           <source
             media="(max-width: 800px)"
-            srcset="/img/bicicletas/nimbus.jpg"
+            srcset="./img/bicicletas/nimbus.jpg"
           />
           <img
             src="./img/fotos/introducao.jpg"
