--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft."
     />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -41,9 +41,8 @@
             Bicicletas feitas sob medida<span class="cor-p1">.</span>
           </h1>
           <p class="font-2-l cor-5">
-            TESTE AQUI - Bicicletas elétricas de alta precisão e qualidade,
-            feitas sob medida para o cliente. Explore o mundo na sua velocidade
-            com a Bikcraft.
+            Bicicletas elétricas de alta precisão e qualidade, feitas sob medida
+            para o cliente. Explore o mundo na sua velocidade com a Bikcraft.
           </p>
           <a class="botao" href="./bicicletas.html">Escolha a sua</a>
         </div>
