--- a/bicicletas.html
+++ b/bicicletas.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bicicletas</title>
     <meta name="description" content="Bicicletas." />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,7 +17,7 @@
   <body id="bicicletas">
     <header class="header-bg">
       <div class="header container">
-        <a href="/"
+        <a href="/index.html"
           ><img src="/img/bikcraft.svg" width="136" height="32" alt="Bikcraft"
         /></a>
         <nav aria-label="primaria">
