--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft."
     />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -21,7 +21,7 @@
   <body>
     <header class="header-bg">
       <div class="header container">
-        <a href="/"
+        <a href="/index.html"
           ><img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft"
         /></a>
         <nav aria-label="primaria">
