--- a/orcamento.html
+++ b/orcamento.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Orçamento | Bickcraft</title>
     <meta name="description" content="Termos e Condições." />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,7 +17,7 @@
   <body id="orcamento">
     <header class="header-bg">
       <div class="header container">
-        <a href="/"><img src="/img/bikcraft.svg" alt="Bikcraft" /></a>
+        <a href="/index.html"><img src="/img/bikcraft.svg" alt="Bikcraft" /></a>
         <nav aria-label="primaria">
           <ul class="header-menu font-1-m cor-0">
             <li><a href="/bicicletas.html">Bicicletas</a></li>
