--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <header class="header-bg">
       <div class="header container">
-        <a href="/index.html"
+        <a href="index.html"
           ><img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft"
         /></a>
         <nav aria-label="primaria">
