--- a/bicicletas.html
+++ b/bicicletas.html
@@ -17,7 +17,7 @@
   <body id="bicicletas">
     <header class="header-bg">
       <div class="header container">
-        <a href="/index.html"
+        <a href="/"
           ><img src="/img/bikcraft.svg" width="136" height="32" alt="Bikcraft"
         /></a>
         <nav aria-label="primaria">
