--- a/bicicletas/nimbus.html
+++ b/bicicletas/nimbus.html
@@ -53,7 +53,11 @@
           </p>
 
           <div class="bicicleta-comprar">
-            <a class="botao" href="../orcamento.html">Comprar Agora</a>
+            <a
+              class="botao"
+              href="../orcamento.html?tipo=bikcraft&produto=nimbus"
+              >Comprar Agora</a
+            >
             <span class="font-1-xs cor-6"
               ><img src="../img/icones/entrega.svg" alt="" />entrega em 5
               dias</span
@@ -194,5 +198,6 @@
         </p>
       </div>
     </footer>
+    <script src="../js/script.js"></script>
   </body>
 </html>
