--- a/index.html
+++ b/index.html
@@ -335,10 +335,10 @@
           <h3 class="font-2-l-b cor-0">Informações</h3>
           <nav>
             <ul class="font-1-m cor-5">
-              <li><a href="/bicicletas.html">Bicicletas</a></li>
-              <li><a href="/seguros.html">Seguros</a></li>
-              <li><a href="/contato.html">Contato</a></li>
-              <li><a href="/termos.html">Termos e Condições</a></li>
+              <li><a href="./bicicletas.html">Bicicletas</a></li>
+              <li><a href="./seguros.html">Seguros</a></li>
+              <li><a href="./contato.html">Contato</a></li>
+              <li><a href="./termos.html">Termos e Condições</a></li>
             </ul>
           </nav>
         </div>
@@ -348,5 +348,7 @@
         </p>
       </div>
     </footer>
+
+    <script src="./js/script.js"></script>
   </body>
 </html>
