--- a/orcamento.html
+++ b/orcamento.html
@@ -20,9 +20,9 @@
         <a href="/"><img src="./img/bikcraft.svg" alt="Bikcraft" /></a>
         <nav aria-label="primaria">
           <ul class="header-menu font-1-m cor-0">
-            <li><a href="/bicicletas.html">Bicicletas</a></li>
-            <li><a href="/seguros.html">Seguros</a></li>
-            <li><a href="/contato.html">Contato</a></li>
+            <li><a href="./bicicletas.html">Bicicletas</a></li>
+            <li><a href="./seguros.html">Seguros</a></li>
+            <li><a href="./contato.html">Contato</a></li>
           </ul>
         </nav>
       </div>
@@ -214,10 +214,10 @@
           <h3 class="font-2-l-b cor-0">Informações</h3>
           <nav>
             <ul class="font-1-m cor-5">
-              <li><a href="/bicicletas.html">Bicicletas</a></li>
-              <li><a href="/seguros.html">Seguros</a></li>
-              <li><a href="/contato.html">Contato</a></li>
-              <li><a href="/termos.html">Termos e Condições</a></li>
+              <li><a href="./bicicletas.html">Bicicletas</a></li>
+              <li><a href="./seguros.html">Seguros</a></li>
+              <li><a href="./contato.html">Contato</a></li>
+              <li><a href="./termos.html">Termos e Condições</a></li>
             </ul>
           </nav>
         </div>
@@ -227,5 +227,6 @@
         </p>
       </div>
     </footer>
+    <script src="./js/script.js"></script>
   </body>
 </html>
