--- a/seguros.html
+++ b/seguros.html
@@ -20,9 +20,9 @@
         <a href="/"><img src="./img/bikcraft.svg" alt="Bikcraft" /></a>
         <nav aria-label="primaria">
           <ul class="header-menu font-1-m cor-0">
-            <li><a href="/bicicletas.html">Bicicletas</a></li>
-            <li><a href="/seguros.html">Seguros</a></li>
-            <li><a href="/contato.html">Contato</a></li>
+            <li><a href="./bicicletas.html">Bicicletas</a></li>
+            <li><a href="./seguros.html">Seguros</a></li>
+            <li><a href="./contato.html">Contato</a></li>
           </ul>
         </nav>
       </div>
@@ -50,7 +50,11 @@
             <li>Suporte 08h às 18h</li>
             <li>Cobertura estadual</li>
           </ul>
-          <a class="botao secundario" href="./orcamento.html">Inscreva-se</a>
+          <a
+            class="botao secundario"
+            href="./orcamento.html?tipo=seguro&produto=prata"
+            >Inscreva-se</a
+          >
         </div>
 
         <div class="seguros-item">
@@ -66,7 +70,9 @@
             <li>Desconto em parceiros</li>
             <li>Acesso ao Clube Bikcraft</li>
           </ul>
-          <a class="botao" href="./orcamento.html">Inscreva-se</a>
+          <a class="botao" href="./orcamento.html?tipo=seguro&produto=ouro"
+            >Inscreva-se</a
+          >
         </div>
       </div>
     </main>
@@ -141,55 +147,101 @@
 
       <dl>
         <div>
-          <dt class="font-1-m-b">Qual forma de pagamento vocês aceitam?</dt>
-          <dd class="font-2-s cor-9">
-            Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO
-            e American Express. Para pagamentos à vista também aceitarmos PIX e
-            Boleto através do PagSeguro.
-          </dd>
-        </div>
-
-        <div>
-          <dt class="font-1-m-b">Como posso entrar em contato?</dt>
-          <dd class="font-2-s cor-9">
-            Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO
-            e American Express. Para pagamentos à vista também aceitarmos PIX e
-            Boleto através do PagSeguro.
-          </dd>
-        </div>
-
-        <div>
-          <dt class="font-1-m-b">Vocês possuem cupom de desconto?</dt>
-          <dd class="font-2-s cor-9">
-            Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO
-            e American Express. Para pagamentos à vista também aceitarmos PIX e
-            Boleto através do PagSeguro.
-          </dd>
-        </div>
-
-        <div>
-          <dt class="font-1-m-b">Posso parcelar no boleto?</dt>
-          <dd class="font-2-s cor-9">
-            Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO
-            e American Express. Para pagamentos à vista também aceitarmos PIX e
-            Boleto através do PagSeguro.
-          </dd>
-        </div>
-
-        <div>
-          <dt class="font-1-m-b">Quantas trocas posso fazer por ano?</dt>
-          <dd class="font-2-s cor-9">
-            Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO
-            e American Express. Para pagamentos à vista também aceitarmos PIX e
-            Boleto através do PagSeguro.
-          </dd>
-        </div>
-
-        <div>
-          <dt class="font-1-m-b">
-            Vocês oferecem também serviço de manutenção?
+          <dt>
+            <button
+              class="font-1-m-b"
+              aria-controls="pergunta1"
+              aria-expanded="true"
+            >
+              Qual forma de pagamento vocês aceitam?
+            </button>
           </dt>
-          <dd class="font-2-s cor-9">
+          <dd id="pergunta1" class="font-2-s cor-9 ativa">
+            Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO
+            e American Express. Para pagamentos à vista também aceitarmos PIX e
+            Boleto através do PagSeguro.
+          </dd>
+        </div>
+
+        <div>
+          <dt>
+            <button
+              class="font-1-m-b"
+              aria-controls="pergunta2"
+              aria-expanded="false"
+            >
+              Como posso entrar em contato?
+            </button>
+          </dt>
+          <dd id="pergunta2" class="font-2-s cor-9">
+            Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO
+            e American Express. Para pagamentos à vista também aceitarmos PIX e
+            Boleto através do PagSeguro.
+          </dd>
+        </div>
+
+        <div>
+          <dt>
+            <button
+              class="font-1-m-b"
+              aria-controls="pergunta3"
+              aria-expanded="false"
+            >
+              Vocês possuem cupom de desconto?
+            </button>
+          </dt>
+          <dd id="pergunta3" class="font-2-s cor-9">
+            Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO
+            e American Express. Para pagamentos à vista também aceitarmos PIX e
+            Boleto através do PagSeguro.
+          </dd>
+        </div>
+
+        <div>
+          <dt>
+            <button
+              class="font-1-m-b"
+              aria-controls="pergunta4"
+              aria-expanded="false"
+            >
+              Posso parcelar no boleto?
+            </button>
+          </dt>
+          <dd id="pergunta4" class="font-2-s cor-9">
+            Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO
+            e American Express. Para pagamentos à vista também aceitarmos PIX e
+            Boleto através do PagSeguro.
+          </dd>
+        </div>
+
+        <div>
+          <dt>
+            <button
+              class="font-1-m-b"
+              aria-controls="pergunta5"
+              aria-expanded="false"
+            >
+              Quantas trocas posso fazer por ano?
+            </button>
+          </dt>
+          <dd id="pergunta5" class="font-2-s cor-9">
+            Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO
+            e American Express. Para pagamentos à vista também aceitarmos PIX e
+            Boleto através do PagSeguro.
+          </dd>
+        </div>
+
+        <div>
+          <dt>
+            <button
+              class="font-1-m-b"
+              aria-controls="pergunta6"
+              aria-expanded="false"
+            >
+              Vocês oferecem também serviço de manutenção?
+            </button>
+          </dt>
+          <dd id="pergunta6" class="font-2-s cor-9">
             Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO
             e American Express. Para pagamentos à vista também aceitarmos PIX e
             Boleto através do PagSeguro.
@@ -225,10 +277,10 @@
           <h3 class="font-2-l-b cor-0">Informações</h3>
           <nav>
             <ul class="font-1-m cor-5">
-              <li><a href="/bicicletas.html">Bicicletas</a></li>
-              <li><a href="/seguros.html">Seguros</a></li>
-              <li><a href="/contato.html">Contato</a></li>
-              <li><a href="/termos.html">Termos e Condições</a></li>
+              <li><a href="./bicicletas.html">Bicicletas</a></li>
+              <li><a href="./seguros.html">Seguros</a></li>
+              <li><a href="./contato.html">Contato</a></li>
+              <li><a href="./termos.html">Termos e Condições</a></li>
             </ul>
           </nav>
         </div>
@@ -238,5 +290,6 @@
         </p>
       </div>
     </footer>
+    <script src="./js/script.js"></script>
   </body>
 </html>
