--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             Bicicletas feitas sob medida<span class="cor-p1">.</span>
           </h1>
           <p class="font-2-l cor-5">
-            TESTE REPOSITORIO - Bicicletas elétricas de alta precisão e qualidade, feitas sob medida
+            TESTE REPOSITORIO. - Bicicletas elétricas de alta precisão e qualidade, feitas sob medida
             para o cliente. Explore o mundo na sua velocidade com a Bikcraft.
           </p>
           <a class="botao" href="./bicicletas.html">Escolha a sua</a>
