--- a/bicicletas/nimbus.html
+++ b/bicicletas/nimbus.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nimbus | Bickcraft</title>
     <meta name="description" content="Bicicleta Nimbus Stark." />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="icon" href="../favicon.svg" type="image/svg+xml">
+    <link rel="stylesheet" href="../css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
